Meta search: Fix icon alignment

--- a/static/less/search.less
+++ b/static/less/search.less
@@ -127,9 +127,12 @@
                 .search-provider-record-image {
                     width: 36px;
                     flex: 0 0 36px;
-                    > i {
+                    > i.fa {
                         font-size: 32px;
                         color: @info;
+                        display: block;
+                        width: 36px;
+                        margin: 0;
                     }
                 }
                 .search-provider-record-text {
